kube-manifests/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: csi
  labels:
    app: csi
  annotations:
#    alb.ingress.kubernetes.io/healthcheck-path: /idex.html
spec:
  selector:
    app: csi
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
